@@ -3,6 +3,7 @@ Version 1.4.1
 * Post DiFX-1.5.4/DiFX-2.0.0
 * NOTE: Active version is now in DiFX-2.0 / trunk
 * Respect DEFAULT_DMS_MASK
+* Add Write-only option to testmod
 
 Version 1.4
 ~~~~~~~~~~~
